--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
     }
   ],
   "require": {
+    "php" : ">=5.6",
     "guzzlehttp/guzzle": "^6.3"
+  },
+  "autoload": {
+    "psr-4": {
+      "Aubruz\\Mainframe\\": "src"
+    }
   }
 }
